--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Welcome to your Website</title>
     </head>
     <body>
-        <h1>|Index|</h1>
+        <h1>|Achraf EL BOUKHARI EL MAMOUN |</h1>
         <br>
-        <a href="cv copy.html">Go in</a>
+        <a href="cv copy.html">Go to My CV</a>
     </body>
 </html>
